--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,7 @@
+setw -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
+bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
+
 set-window-option -g mode-keys vi
