Update .gitconfig, reformat

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,24 +1,26 @@
 [user]
-    email = konstunn@users.noreply.github.com
-    name = Konstantin Gorbunov
+  email = konstunn@users.noreply.github.com
+  name = Konstantin Gorbunov
 [core]
-    editor = /usr/bin/vi
-    pager = less -x4
-    autocrlf = input
+  editor = /usr/bin/vi
+  pager = less -x4
+  autocrlf = input
 [push]
-    default = current
+  default = current
 [diff]
-    tool = vimdiff
+  tool = vimdiff
 [alias]
-    diffs = diff --staged
-    ds = diff --staged
-    st = status
-    l = log
-    d = diff
-    a = add
-    cm = commit
-    ch = checkout
-    f = fetch
-    chp = checkout -p
-    ap = add -p
-    cmm = commit -m
+  diffs = diff --staged
+  ds = diff --staged
+  st = status
+  l = log
+  lp = log -p
+  d = diff
+  a = add
+  cm = commit
+  ch = checkout
+  f = fetch
+  chp = checkout -p
+  chb = checkout -b
+  ap = add -p
+  cmm = commit -m
